themes/wipdev/assets/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;600;700&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Lato', sans-serif;
    color: #223;
    padding: 100px 150px;
}

aside {
    background: #fff;
    position: fixed;
    right: 150px;
    top: 100px;
    text-align: end;
}

aside ul {
    list-style-type: none;
    margin: 0;
}

aside ul li {
    margin-bottom: 7px;
}

aside .links {
    display: flex;
    align-items: center;
    justify-content: end;
    gap: 10px
}

aside .links img {
    height: 40px;
}

.bmc-container {
    margin-top: 50px;
    display: flex;
    align-items: center;
    font-size: x-large;
    gap: 10px;
}

code, pre {
    font-family: monospace;
    margin-bottom: 1rem;
}

code {
    padding: 0 5px;
    background: #ddd;
}

pre code {
    padding: 0;
    line-height: 1.6rem;
    font-size: 1.1rem;
    border-radius: 10px;
}

#logo code {
    background: white;
    color: black;
    padding: 0;
    font-size: 1.7rem;
    line-height: 2.5rem;
}

main {
    width: min(1000px, calc(100vw - 500px));
    padding-right: 20px;
}

img {
    width: 100%;
    margin: 0 auto;
    border-radius: 10px;
}

h1 {
    font-size: 3rem;
    margin-bottom: 2rem;
}

.post-title {
    line-height: 3rem;
    margin-bottom: 0;
}

.post-subtitle {
    font-weight: 500;
    font-size: 2rem;
    margin: 1rem 0;
}

.post-date {
    margin: 1rem 0;
    font-weight: 400;
    font-size: 1.3rem;
}

h2 {
    font-size: 2.2rem;
    margin-top: 2rem;
    margin-bottom: 1rem;
}

h3 {
    font-size: 1.5rem;
    margin-top: 2rem;
    margin-bottom: 1rem;
}

p, ul, ol {
    font-size: 1.3rem;
    line-height: 2rem;
    margin-bottom: 1rem;
}

ul {
    list-style-type: circle;
}

ul, ol {
    margin-left: 1em;
}

ul ul {
    margin-bottom: 0;
    margin-left: 2em;
    list-style-type: "-  ";
}

a {
    text-decoration: none;
    color: #1111b9;
}

a:hover {
    text-decoration: underline;
}

hr {
    opacity: 20%;
    margin: 30px auto;
}

blockquote {
    border-left: 5px solid #ddd;
    padding-left: 1.5rem;
    font-style: italic;
}

blockquote * {
    color: #333;
    line-height: 170%;
}

.listing-title {
    font-size: 1.5rem;
    margin: 10px 0;
    font-weight: 600;
    display: flex;
    justify-content: space-between;
}

.listing-title small {
    font-weight: 400;
    font-size: 1.1rem;
}

.terms {
    margin-top: 45px;
}

.terms ul {
    line-height: 1.5rem;
    list-style-type: none;
    font-size: medium;
    display: flex;
    gap: 15px;
}

.home-post-container {
    display: flex;
    gap: 0 20px;
}

.home-post {
    width: 100%;
}

.home-post a {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}

.home-post h3 {
    margin: 15px 0;
    text-align: center;
}

.post-cover {
    margin-bottom: 1rem;
}

@media (max-width: 1000px) {
    body {
        padding: 125px 25px;
    }

    main {
        width: 100%;
        margin-top: 25px;
    }

    aside {
        height: 100px;
        width: 100%;
        padding: 0 10px;
        left: 0;
        top: 0;
    }

    #logo {
        margin-bottom: 10px;
        text-align: left;
        padding-left: 15px;
        padding-top: 15px;
    }

    #logo code {
        font-size: 1.2rem;
        margin-bottom: 0;
    }

    aside ul {
        background: white;
        font-size: 1.2rem;
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: center;
        gap: 0 20px;
        padding: 0 20px;
    }

    aside .links {
        position: absolute;
        top: 15px;
        right: 15px;
    }

    aside .links img {
        height: 30px;
    }

    .bmc-container {
        flex-direction: column;
    }

    .home-post-container {
        flex-direction: column;
    }
}

